Add Level entity, App need redis, and others
* Hence multi app, need new redis (db is enough)
* Element support await init
* See Level class for more info behind Level logic

--- a/test1.ipynb
+++ b/test1.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "import inspect\n",
     "import json\n",
     "\n",
     "import asyncio\n",
@@ -270,29 +271,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['a', 'b', 'c', 'd', 'e', 'f']\n",
-      "True\n",
-      "False\n",
-      "2\n",
-      "None\n",
-      "['c', 'd', 'e']\n"
-     ]
-    }
-   ],
+   "execution_count": 5,
+   "outputs": [],
    "source": [
     "import asyncio\n",
     "import aioredis\n",
-    "from purse.collections import RedisList\n",
+    "from purse.collections import RedisList, RedisKeySpace\n",
     "\n",
     "import nest_asyncio\n",
-    "nest_asyncio.apply()\n",
-    "\n",
+    "nest_asyncio.apply()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "async def main():\n",
     "    local_list = ['a', 'b', 'c', 'd', 'e', 'f']\n",
     "\n",
@@ -337,6 +337,102 @@
     "    await redis_list.popleft()\n",
     "\n",
     "asyncio.run(main())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "b'\\x80\\x04\\x95J\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x8c\\x08__main__\\x94\\x8c\\x04Ciao\\x94\\x93\\x94)\\x81\\x94}\\x94(\\x8c\\x02ok\\x94\\x88\\x8c\\x03bau\\x94h\\x00\\x8c\\x03Bau\\x94\\x93\\x94)\\x81\\x94}\\x94(\\x8c\\x03ok2\\x94\\x88\\x8c\\x03boh\\x94K\\x03ubub.'\n",
+      "<__main__.Ciao object at 0x7fd34242b430>\n",
+      "---------------------------------------------------\n",
+      "True\n",
+      "name='undefined' healthiness=6.6 tasty=False color='green'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "from pydantic import BaseModel\n",
+    "\n",
+    "class Bau:\n",
+    "    def __init__(self, boh) -> None:\n",
+    "        self.ok2 = True\n",
+    "        self.boh = boh\n",
+    "\n",
+    "class Ciao:\n",
+    "    def __init__(self) -> None:\n",
+    "        super().__init__()\n",
+    "        self.ok = True\n",
+    "        self.bau = Bau(3)\n",
+    "\n",
+    "# Pydantic Model\n",
+    "class Plant(BaseModel):\n",
+    "    name: str = 'undefined'\n",
+    "    healthiness: float\n",
+    "    tasty: bool = False\n",
+    "\n",
+    "class Three(Plant):\n",
+    "    color: str = 'green'\n",
+    "\n",
+    "async def main():\n",
+    "    redis = aioredis.Redis()\n",
+    "\n",
+    "    k = RedisKeySpace(redis=redis, prefix='k:__app:', value_type=bytes)\n",
+    "    pickled_obj = pickle.dumps(Ciao())\n",
+    "    ret = await k.set('pickled', pickled_obj)\n",
+    "    print(ret)\n",
+    "    ret = await k.get('pickled')\n",
+    "    print(ret)\n",
+    "    unpickled_obj = pickle.loads(ret)\n",
+    "    print(unpickled_obj)\n",
+    "\n",
+    "    print(\"-----------------\"*3)\n",
+    "\n",
+    "    k = RedisKeySpace(redis=redis, prefix='k:__app:', value_type=Three)\n",
+    "    obj = Three(healthiness = 6.6)\n",
+    "    ret = await k.set('pydantic', obj)\n",
+    "    print(ret)\n",
+    "    ret = await k.get('pydantic')\n",
+    "    print(ret)\n",
+    "\n",
+    "\n",
+    "asyncio.run(main())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: asyncstdlib in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (3.10.3)\r\n",
+      "\u001B[33mWARNING: You are using pip version 21.1.1; however, version 22.0.3 is available.\r\n",
+      "You should consider upgrading via the '/home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/bin/python3.8 -m pip install --upgrade pip' command.\u001B[0m\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install asyncstdlib"
    ],
    "metadata": {
     "collapsed": false,
