--- a/test1.ipynb
+++ b/test1.ipynb
@@ -271,12 +271,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import asyncio\n",
     "import aioredis\n",
-    "from purse.collections import RedisList, RedisKeySpace\n",
     "\n",
     "import nest_asyncio\n",
     "nest_asyncio.apply()"
@@ -347,23 +346,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "b'\\x80\\x04\\x95J\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x8c\\x08__main__\\x94\\x8c\\x04Ciao\\x94\\x93\\x94)\\x81\\x94}\\x94(\\x8c\\x02ok\\x94\\x88\\x8c\\x03bau\\x94h\\x00\\x8c\\x03Bau\\x94\\x93\\x94)\\x81\\x94}\\x94(\\x8c\\x03ok2\\x94\\x88\\x8c\\x03boh\\x94K\\x03ubub.'\n",
-      "<__main__.Ciao object at 0x7fd34242b430>\n",
-      "---------------------------------------------------\n",
-      "True\n",
-      "name='undefined' healthiness=6.6 tasty=False color='green'\n"
-     ]
-    }
-   ],
+   "execution_count": 3,
+   "outputs": [],
    "source": [
-    "import pickle\n",
     "from pydantic import BaseModel\n",
     "\n",
     "class Bau:\n",
@@ -384,8 +369,20 @@
     "    tasty: bool = False\n",
     "\n",
     "class Three(Plant):\n",
-    "    color: str = 'green'\n",
-    "\n",
+    "    color: str = 'green'"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "async def main():\n",
     "    redis = aioredis.Redis()\n",
     "\n",
@@ -419,20 +416,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: asyncstdlib in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (3.10.3)\r\n",
-      "\u001B[33mWARNING: You are using pip version 21.1.1; however, version 22.0.3 is available.\r\n",
-      "You should consider upgrading via the '/home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/bin/python3.8 -m pip install --upgrade pip' command.\u001B[0m\r\n"
+      "True\n",
+      "name='undefined' healthiness=6.6 tasty=False color='green'\n",
+      "---------------------------------------------------\n",
+      "0\n",
+      "3\n",
+      "0\n",
+      "3\n",
+      "name='undefined' healthiness=6.6 tasty=False color='green'\n",
+      "name='undefined' healthiness=6.7 tasty=False color='green'\n",
+      "name='undefined' healthiness=6.8 tasty=False color='green'\n"
      ]
     }
    ],
    "source": [
-    "!pip install asyncstdlib"
+    "import asyncio\n",
+    "import aioredis\n",
+    "from mape.knowledge import Knowledge\n",
+    "\n",
+    "async def main():\n",
+    "    redis = aioredis.Redis()\n",
+    "    k = Knowledge(redis, '__prefix')\n",
+    "\n",
+    "    obj = Three(healthiness = 6.6)\n",
+    "    ret = await k.keyspace.set('pickled', obj)\n",
+    "    print(ret)\n",
+    "    ret = await k.keyspace.pop('pickled')\n",
+    "    print(ret)\n",
+    "\n",
+    "    print(\"-----------------\"*3)\n",
+    "\n",
+    "    myset = k.create_set('myset', Three)\n",
+    "    obj = Three(healthiness = 6.6)\n",
+    "    ret = await myset.add(Three(healthiness = 6.6))\n",
+    "    print(ret)\n",
+    "    ret = await myset.len()\n",
+    "    print(ret)\n",
+    "    ret = await myset.update(Three(healthiness = 6.7), Three(healthiness = 6.8), Three(healthiness = 6.8))\n",
+    "    print(ret)\n",
+    "    ret = await myset.len()\n",
+    "    print(ret)\n",
+    "    async for i in myset.values():\n",
+    "        print(i)\n",
+    "\n",
+    "asyncio.run(main())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "outputs": [],
+   "source": [
+    "from typing import TypeVar\n",
+    "Pickled = TypeVar('Pickled')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "typing.TypeVar"
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(Pickled)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "outputs": [],
+   "source": [
+    "ok = Pickled"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ok is Pickled"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Pick(Pickled):\n",
+    "    pass\n",
+    "\n",
+    "issubclass(Pick, Pickled)"
    ],
    "metadata": {
     "collapsed": false,
