Attach Knowledge in App, Level and Loop
* Defined constants with reserved strings
* Loop without a Level are added to an empty default Level

--- a/test1.ipynb
+++ b/test1.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "import asyncio\n",
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -447,7 +447,7 @@
     "    obj = Three(healthiness = 6.6)\n",
     "    ret = await k.keyspace.set('pickled', obj)\n",
     "    print(ret)\n",
-    "    ret = await k.keyspace.pop('pickled')\n",
+    "    ret = await k.keyspace.get('pickled')\n",
     "    print(ret)\n",
     "\n",
     "    print(\"-----------------\"*3)\n",
@@ -476,97 +476,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "outputs": [],
-   "source": [
-    "from typing import TypeVar\n",
-    "Pickled = TypeVar('Pickled')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "outputs": [
     {
-     "data": {
-      "text/plain": "typing.TypeVar"
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name='undefined' healthiness=6.6 tasty=False color='green'\n"
+     ]
     }
    ],
    "source": [
-    "type(Pickled)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "outputs": [],
-   "source": [
-    "ok = Pickled"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "True"
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ok is Pickled"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "True"
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class Pick(Pickled):\n",
-    "    pass\n",
+    "async def main():\n",
+    "    redis = aioredis.Redis()\n",
+    "    k = Knowledge(redis, '__prefix')\n",
     "\n",
-    "issubclass(Pick, Pickled)"
+    "    ret = await k.keyspace.get('pickled')\n",
+    "    print(ret)\n",
+    "\n",
+    "asyncio.run(main())"
    ],
    "metadata": {
     "collapsed": false,
