--- a/test1.ipynb
+++ b/test1.ipynb
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -619,28 +619,29 @@
      "text": [
       "Collecting uvicorn\r\n",
       "  Downloading uvicorn-0.17.4-py3-none-any.whl (52 kB)\r\n",
-      "\u001B[K     |████████████████████████████████| 52 kB 1.7 MB/s  eta 0:00:01\r\n",
+      "\u001B[K     |████████████████████████████████| 52 kB 439 kB/s eta 0:00:01\r\n",
       "\u001B[?25hCollecting FastAPI\r\n",
       "  Downloading fastapi-0.73.0-py3-none-any.whl (52 kB)\r\n",
-      "\u001B[K     |████████████████████████████████| 52 kB 1.1 MB/s  eta 0:00:01\r\n",
+      "\u001B[K     |████████████████████████████████| 52 kB 670 kB/s eta 0:00:01\r\n",
+      "\u001B[?25hCollecting h11>=0.8\r\n",
+      "  Downloading h11-0.13.0-py3-none-any.whl (58 kB)\r\n",
+      "\u001B[K     |████████████████████████████████| 58 kB 1.3 MB/s eta 0:00:01\r\n",
       "\u001B[?25hCollecting asgiref>=3.4.0\r\n",
       "  Downloading asgiref-3.5.0-py3-none-any.whl (22 kB)\r\n",
       "Requirement already satisfied: click>=7.0 in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (from uvicorn) (8.0.3)\r\n",
-      "Collecting h11>=0.8\r\n",
-      "  Downloading h11-0.13.0-py3-none-any.whl (58 kB)\r\n",
-      "\u001B[K     |████████████████████████████████| 58 kB 7.4 MB/s  eta 0:00:01\r\n",
-      "\u001B[?25hRequirement already satisfied: pydantic!=1.7,!=1.7.1,!=1.7.2,!=1.7.3,!=1.8,!=1.8.1,<2.0.0,>=1.6.2 in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (from FastAPI) (1.8.2)\r\n",
       "Collecting starlette==0.17.1\r\n",
       "  Downloading starlette-0.17.1-py3-none-any.whl (58 kB)\r\n",
-      "\u001B[K     |████████████████████████████████| 58 kB 6.9 MB/s  eta 0:00:01\r\n",
-      "\u001B[?25hCollecting anyio<4,>=3.0.0\r\n",
+      "\u001B[K     |████████████████████████████████| 58 kB 1.3 MB/s eta 0:00:01\r\n",
+      "\u001B[?25hRequirement already satisfied: pydantic!=1.7,!=1.7.1,!=1.7.2,!=1.7.3,!=1.8,!=1.8.1,<2.0.0,>=1.6.2 in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (from FastAPI) (1.8.2)\r\n",
+      "Collecting anyio<4,>=3.0.0\r\n",
       "  Downloading anyio-3.5.0-py3-none-any.whl (79 kB)\r\n",
-      "\u001B[K     |████████████████████████████████| 79 kB 6.8 MB/s  eta 0:00:01\r\n",
+      "\u001B[K     |████████████████████████████████| 79 kB 1.4 MB/s eta 0:00:01\r\n",
       "\u001B[?25hCollecting sniffio>=1.1\r\n",
-      "  Using cached sniffio-1.2.0-py3-none-any.whl (10 kB)\r\n",
+      "  Downloading sniffio-1.2.0-py3-none-any.whl (10 kB)\r\n",
       "Collecting idna>=2.8\r\n",
-      "  Using cached idna-3.3-py3-none-any.whl (61 kB)\r\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (from pydantic!=1.7,!=1.7.1,!=1.7.2,!=1.7.3,!=1.8,!=1.8.1,<2.0.0,>=1.6.2->FastAPI) (4.0.1)\r\n",
+      "  Downloading idna-3.3-py3-none-any.whl (61 kB)\r\n",
+      "\u001B[K     |████████████████████████████████| 61 kB 1.5 MB/s eta 0:00:01\r\n",
+      "\u001B[?25hRequirement already satisfied: typing-extensions>=3.7.4.3 in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (from pydantic!=1.7,!=1.7.1,!=1.7.2,!=1.7.3,!=1.8,!=1.8.1,<2.0.0,>=1.6.2->FastAPI) (4.0.1)\r\n",
       "Installing collected packages: sniffio, idna, anyio, starlette, h11, asgiref, uvicorn, FastAPI\r\n",
       "Successfully installed FastAPI-0.73.0 anyio-3.5.0 asgiref-3.5.0 h11-0.13.0 idna-3.3 sniffio-1.2.0 starlette-0.17.1 uvicorn-0.17.4\r\n",
       "\u001B[33mWARNING: You are using pip version 21.1.1; however, version 22.0.3 is available.\r\n",
@@ -752,6 +753,29 @@
     "import uvicorn\n",
     "\n",
     "uvicorn.run(\".:app\", host='0.0.0.0', port=4557, reload=True, debug=True, workers=3)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'a': 3, 'b': 5, 'c': 6}"
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{**{'a':3, 'b':4}, **{'b':5, 'c':6}}"
    ],
    "metadata": {
     "collapsed": false,
