Add POSTObserver for push item on REST endpoints (ie Elements)

--- a/test1.ipynb
+++ b/test1.ipynb
@@ -689,66 +689,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:     Will watch for changes in these directories: ['/home/muttley/Projects/SecondLevelDegrees/courses/Thesis/source/playground']\n",
-      "INFO:     Uvicorn running on http://0.0.0.0:4557 (Press CTRL+C to quit)\n",
-      "INFO:     Started reloader process [353770] using statreload\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'test-fastapi.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'test-fastapi.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'test-fastapi.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'test-fastapi.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'test-fastapi.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'test-fastapi.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'test-fastapi.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'test-fastapi.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'test-fastapi.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'mape/__init__.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'mape/__init__.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'test3.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'test3.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'mape/__init__.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'test3.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'test-fastapi.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'test-fastapi.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'test-fastapi.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'test-fastapi.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'test-fastapi.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'test-fastapi.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'test-fastapi.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "WARNING:  StatReload detected file change in 'test-fastapi.py'. Reloading...\n",
-      "ERROR:    Error loading ASGI app. Import string \"app\" must be in format \"<module>:<attribute>\".\n",
-      "INFO:     Stopping reloader process [353770]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "import uvicorn\n",
     "\n",
@@ -763,20 +705,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "outputs": [
     {
-     "data": {
-      "text/plain": "{'a': 3, 'b': 5, 'c': 6}"
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: aiohttp in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (3.8.1)\r\n",
+      "Requirement already satisfied: cchardet in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (2.1.7)\r\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (from aiohttp) (1.3.0)\r\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (from aiohttp) (1.2.0)\r\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (from aiohttp) (1.7.2)\r\n",
+      "Requirement already satisfied: charset-normalizer<3.0,>=2.0 in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (from aiohttp) (2.0.12)\r\n",
+      "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (from aiohttp) (4.0.2)\r\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (from aiohttp) (6.0.2)\r\n",
+      "Requirement already satisfied: attrs>=17.3.0 in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (from aiohttp) (21.4.0)\r\n",
+      "Requirement already satisfied: idna>=2.0 in /home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/lib/python3.8/site-packages (from yarl<2.0,>=1.0->aiohttp) (3.3)\r\n",
+      "\u001B[33mWARNING: You are using pip version 21.1.1; however, version 22.0.3 is available.\r\n",
+      "You should consider upgrading via the '/home/muttley/.pyenv/versions/3.8.12/envs/venv-3.8.12/bin/python3.8 -m pip install --upgrade pip' command.\u001B[0m\r\n"
+     ]
     }
    ],
    "source": [
-    "{**{'a':3, 'b':4}, **{'b':5, 'c':6}}"
+    "!pip install aiohttp cchardet"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "ok\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import aiohttp\n",
+    "import asyncio\n",
+    "\n",
+    "from aiohttp.client_exceptions import ClientError\n",
+    "\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "\n",
+    "session = aiohttp.ClientSession('http://0.0.0.0:6060')\n",
+    "try:\n",
+    "    params = {'port': 'in', 'notifications': 'next'}\n",
+    "    async with session.post('/loops/rest-test/elements/executer', data=b'data', params=params) as resp:\n",
+    "        print(resp.status)\n",
+    "        if resp.status == 200:\n",
+    "            print(\"ok\")\n",
+    "        else:\n",
+    "            print(\"something go wrong\")\n",
+    "        text = await resp.text()\n",
+    "        print(json.loads(text))\n",
+    "except ClientError as e:\n",
+    "    raise\n",
+    "finally:\n",
+    "    await session.close()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
