POSTObserver allow element_path

--- a/test1.ipynb
+++ b/test1.ipynb
@@ -31,6 +31,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "outputs": [
     {
@@ -786,9 +798,92 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [
+    "url = '/loops/uid/elements/uid'\n",
+    "path = 'loop_uid.element_uid.dd'"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "malformed path\n"
+     ]
+    }
+   ],
+   "source": [
+    "from mape.constants import RESERVED_SEPARATOR\n",
+    "\n",
+    "element_notify_path = '/loops/{loop_uid}/elements/{element_uid}'\n",
+    "\n",
+    "try:\n",
+    "    loop_uid, element_uid = path.split(RESERVED_SEPARATOR)\n",
+    "    print(\"ciao\")\n",
+    "    element_notify_path.format(loop_uid=loop_uid, element_uid=element_uid)\n",
+    "except ValueError as e:\n",
+    "    print('malformed path')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "element_notify_path = '/loops/{loop_uid}/elements/{element_uid}'"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'/loops/ciao/elements/ciao'"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "element_notify_path.format(loop_uid='ciao', element_uid='ciao')"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
