Add test-coordinated-car.py example
* Coordinated Control Pattern implementation
* Allow the use of distribute deploy
* Working with REST endpoint or REDIS channels

--- a/test1.ipynb
+++ b/test1.ipynb
@@ -844,22 +844,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "outputs": [],
    "source": [
-    "element_notify_path = '/loops/{loop_uid}/elements/{element_uid}'"
+    "from pydantic import BaseModel\n",
+    "\n",
+    "class SpeedItem:\n",
+    "    def __str__(self) -> str:\n",
+    "        return \"ciao\"\n",
+    "\n",
+    "    value: int = 0\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -870,19 +864,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "test=SpeedItem()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "'/loops/ciao/elements/ciao'"
+      "text/plain": "'ciao'"
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "element_notify_path.format(loop_uid='ciao', element_uid='ciao')"
+    "str(test)"
    ],
    "metadata": {
     "collapsed": false,
