Remove param_self from decorator
Now self will be passed inspecting the function signature

--- a/test1.ipynb
+++ b/test1.ipynb
@@ -1376,6 +1376,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def ciao (uno, due, self, tre):\n",
+    "    ...\n",
+    "\n",
+    "import inspect\n",
+    "\n",
+    "'self' in inspect.signature(ciao).parameters.keys()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
