Polishing Master/Slave example

--- a/test1.ipynb
+++ b/test1.ipynb
@@ -1404,9 +1404,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
-   "source": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Veyron\n",
+      "Countach\n",
+      "Panda\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in ('Veyron', 'Countach', 'Panda'):\n",
+    "    print(name)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
