Add notifications and fix prefix to K
* Added Redis keyspace notification (https://redis.io/topics/notifications) support for Knowledge
* Change K prefix for App, Level and Loop to avoid conflicts
* Fix a typo in constants.py

--- a/test1.ipynb
+++ b/test1.ipynb
@@ -1429,6 +1429,121 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "my_data = np.genfromtxt('examples/car_name.csv', dtype='str')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "my_data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array(['4Runner', 'Cordoba', 'Gran', 'Fury', 'Nubira', 'Sonic', 'Acadia',\n       'Corniche', 'Gran', 'Turismo', 'Oasis', 'Sonoma', 'Accent',\n       'Corolla', 'Grand', 'Am', 'Odyssey', 'Sorento', 'Acclaim',\n       'Coronet', 'Grand', 'Prix', 'Omega', 'Soul', 'Accord', 'Corrado',\n       'Grand', 'Vitara', 'Omni', 'Spark', 'Achieva', 'Corsair', 'Grand',\n       'Voyager', 'Optima', 'Spectra', 'Aerio', 'Corsica', 'Greiz',\n       'Outback', 'Spectrum', 'Aerostar', 'Cortina', 'Gremlin',\n       'Outlander', 'Spider', 'Aileron', 'Corvette', 'Grenada', 'Paceman',\n       'Spirior', 'Airstream', 'Cougar', 'Highlander', 'Pacer', 'Spirit',\n       'Alero', 'Countach', 'Hobio', 'Pacifica', 'Sportage', 'Allante',\n       'Courier', 'Hombre', 'Pampa', 'Sportvan', 'Alliance', 'Cressida',\n       'Horizon', 'Panamera', 'Sprint', 'Alpine', 'Crider', 'Hornet',\n       'Parisienne', 'Sprinter', 'Altima', 'Crossfire', 'Hummer', 'Park',\n       'Avenue', 'Spyder', 'Amanti', 'Crosstrek', 'Hunter', 'Park',\n       'Ward', 'Squire', 'Amaze', 'Crown', 'Victoria', 'Huracan', 'Paseo',\n       'St', 'Regis', 'Amigo', 'Cruze', 'Husky', 'Passat', 'Stanza',\n       'Anglia', 'Cube', 'Ikon', 'Passport', 'Starion', 'Aperta',\n       'Cutlass', 'Impala', 'Pathfinder', 'Starlet', 'Aries', 'Dakota',\n       'Imperial', 'Patriot', 'Starliner', 'Armada', 'Dart', 'Impreza',\n       'Phaeton', 'Stealth', 'Arnage', 'Dasher', 'Impulse', 'Phantom',\n       'Stelvio', 'Arrow', 'Daytona', 'Inscription', 'Phoenix', 'Stinger',\n       'Arya', 'Defender', 'Insight', 'Pilot', 'Storm', 'Ascari', 'del',\n       'Sol', 'Integra', 'Pininfarina', 'Strada', 'Ascender', 'Delta',\n       'Intrepid', 'Polara', 'Stratus', 'Ascent', 'Demon', 'Intrigue',\n       'Popular', 'Stylus', 'Aspen', 'DeVille', 'Ioniq', 'Portofino',\n       'Suburban', 'Aspire', 'Diablo', 'Jade', 'Precis', 'Summit',\n       'Astra', 'Diamante', 'Javelin', 'Prefect', 'Sunbeam', 'Astro',\n       'Dino', 'Jazz', 'Prelude', 'Sunbird', 'Aura', 'Diplomat', 'Jetta',\n       'Premier', 'Sundance', 'Aurora', 'Discovery', 'Jimmy', 'Previa',\n       'Sunfire', 'Avalanche', 'Drifter', 'Juke', 'Prius', 'Sunliner',\n       'Avalon', 'Durango', 'Justy', 'Prizm', 'Supra', 'Avancier',\n       'Duster', 'Ka', 'Probe', 'Swift', 'Avenger', 'Dynasty', 'Karma',\n       'Pronto', 'Tacoma', 'Aventador', 'Eagle', 'Kingsway', 'Prot', 'g',\n       'Tahoe', 'Aveo', 'Echo', 'Kizashi', 'Prowler', 'Talon', 'Aviator',\n       'Eclipse', 'Kodiak', 'Pruis', 'Taurus', 'Axiom', 'Econoline',\n       'Kuga', 'PT', 'Cruiser', 'Telstar', 'Axxess', 'Ecosport',\n       'LaCrosse', 'Pulsar', 'Tempo', 'Azera', 'Edge', 'Lagonda', 'Puma',\n       'Tercel', 'Aztek', 'Eight', 'Lancer', 'Quadrifoglio', 'Terrain',\n       'Azure', 'Eighty', 'Eight', 'Land', 'Cruiser', 'Quantum',\n       'Terraza', 'Baja', 'Elan', 'Landau', 'Quattro', 'Territory',\n       'Barchetta', 'Elantra', 'Landaulet', 'Quest', 'Testarossa',\n       'Beetle', 'ElCamino', 'Lanos', 'Rabbit', 'Thunderbird', 'Bentayga',\n       'Eldorado', 'Laser', 'Raider', 'Tiburon', 'Beretta', 'Electra',\n       'Laviolette', 'Rainier', 'Tiguan', 'Berlinetta', 'Element', 'Leaf',\n       'Rally', 'Titan', 'Blackwood', 'Elise', 'LeBaron', 'Ram', 'Topaz',\n       'Blazer', 'Elite', 'Legacy', 'Ramcharger', 'Torino', 'Bonneville',\n       'Elysion', 'Leganza', 'Rampage', 'Toronado', 'Borrego', 'Enclave',\n       'Legend', 'Ranchero', 'Torrent', 'Boxter', 'Encore', 'LeMans',\n       'Range', 'Rover', 'Touareg', 'Brat', 'Entourage', 'LeSabre',\n       'Ranger', 'Touring', 'Brava', 'Envision', 'Levante', 'Rapide',\n       'Town', 'Country', 'Bravada', 'Envoy', 'Liberte', 'Reatta', 'Town',\n       'Car', 'Breeze', 'Enzo', 'Liberty', 'Rebel', 'Tracer', 'Brio',\n       'Eos', 'Loyale', 'Regal', 'tracker', 'Bronco', 'Equator',\n       'Lucerne', 'Regency', 'TrailBlazer', 'Brooklands', 'Equinox',\n       'Lumina', 'Regent', 'Trans', 'Sport', 'Brougham', 'Equus', 'Luv',\n       'Reliant', 'Traverse', 'Caballero', 'Escalade', 'Lynx',\n       'Rendezvous', 'Trax', 'Cabrio', 'Escape', 'Macan', 'Renegade',\n       'Tredia', 'Cabriolet', 'Escort', 'Magnum', 'Reno', 'Tribeca',\n       'Cadenza', 'Esperante', 'Malibu', 'Ridgeline', 'Tribute', 'Calais',\n       'Esprit', 'Mangusta', 'Rio', 'Trooper', 'Caliber', 'Estate',\n       'Maranello', 'Riviera', 'Tuareg', 'California', 'Esteem',\n       'Marauder', 'Roadmaster', 'Tucson', 'Camargue', 'Eurovan',\n       'Mariner', 'Roadster', 'Tundra', 'Camry', 'Evora', 'Marquis',\n       'Rocky', 'Turbo', 'Canyon', 'Excel', 'Matador', 'Rodeo', 'Turismo',\n       'Capri', 'Excursion', 'Matrix', 'Rogue', 'Uplander', 'Caprice',\n       'Executive', 'Maverick', 'Rondo', 'Valiant', 'Caravan', 'Exige',\n       'Maxima', 'Routan', 'Vamos', 'Caravelle', 'Expedition', 'Maybach',\n       'Royal', 'Vanagon', 'Carrera', 'Explorer', 'Mayfair', 'Royale',\n       'Vanden', 'Cascada', 'Expo', 'Meadowbrook', 'Sable', 'Vandura',\n       'Catera', 'Express', 'Medallion', 'Safari', 'Vanquish', 'Cavalier',\n       'Fairlaine', 'Meteor', 'Samurai', 'Vantage', 'Cayenne', 'Fairmont',\n       'Metro', 'Samuri', 'VehiCROSS', 'Cayman', 'Falcon', 'Miata',\n       'Santa', 'Fe', 'Veloster', 'Celebrity', 'Festiva', 'Midget',\n       'Sapporo', 'Venture', 'Celica', 'Fiero', 'Milan', 'Saratoga',\n       'Venza', 'Centura', 'Fiesta', 'Milano', 'Savana', 'Veracruz',\n       'Century', 'Fifth', 'Avenue', 'Millenia', 'Scaglietti', 'Verano',\n       'Challenger', 'Figo', 'Mirada', 'Scamp', 'Verona', 'Champ',\n       'Firebird', 'Mirage', 'Scirocco', 'Versa', 'Charade', 'Firenza',\n       'Mirai', 'Scorpio', 'Veyron', 'Charger', 'Fit', 'Mobilio',\n       'Scrambler', 'Vezel', 'Cherokee', 'Fleetwood', 'Modena', 'Sebring',\n       'Vibe', 'Chevelle', 'Flex', 'Modulo', 'Sedona', 'Vigor',\n       'Chevette', 'Flying', 'Spur', 'Monaco', 'Senior', 'Villager',\n       'Cheyenne', 'Focus', 'Mondeo', 'Sentra', 'Viper', 'Ciera',\n       'Forenza', 'Mondial', 'Sephia', 'Virage', 'Cimarron', 'Forester',\n       'Montana', 'Sequoia', 'Viscount', 'Cirrus', 'Forte', 'Monte',\n       'Carlo', 'Seville', 'Vision', 'Citation', 'Fox', 'Montego',\n       'Shadow', 'Vitara', 'City', 'Freed', 'Monterey', 'Sidekick',\n       'Vogue', 'Civic', 'Freed', 'Spike', 'Montero', 'Sienna', 'Volt',\n       'Club', 'Wagon', 'Freelander', 'Mountaineer', 'Sierra', 'Voyager',\n       'Clubman', 'Frontier', 'Mulsanne', 'Sigma', 'Vue', 'Cobalt',\n       'Fuego', 'Murano', 'Silhouette', 'Wagoneer', 'Colorado', 'Fusion',\n       'Murcielago', 'Silver', 'Dawn', 'Wayfarer', 'Colt', 'Galant',\n       'Mustang', 'Silver', 'Seraph', 'Windsor', 'Comanche', 'Galaxie',\n       'Mystique', 'Silver', 'Shadow', 'Windstar', 'Compass', 'Galaxy',\n       'Mythos', 'Silver', 'Spirit', 'Wraith', 'Concord', 'Gallardo',\n       'Navajo', 'Silver', 'Spur', 'Wrangler', 'Concorde', 'Genesis',\n       'Navigator', 'Silver', 'Wraith', 'Xterra', 'Conquest', 'Ghibli',\n       'Neon', 'Silverado', 'Yaris', 'Consul', 'Gienia', 'New', 'Yorker',\n       'Skyhawk', 'Ypsilon', 'Continental', 'Giulia', 'Newport',\n       'Skylark', 'Yukon', 'Contour', 'Golf', 'Ninety', 'Eight', 'Solara',\n       'Zephyr', 'Cooper', 'Grace', 'Niro', 'Somerset', 'Cordia',\n       'Graduate', 'Nova', 'Sonata'], dtype='<U12')"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array(['Portofino', 'Courier', 'tracker', 'Monte', 'Electra'],\n      dtype='<U12')"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.choice(my_data, 5)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ciao\n"
+     ]
+    }
+   ],
+   "source": [
+    "casa = set([1,2,3])\n",
+    "try:\n",
+    "    car_name = casa.pop()\n",
+    "    car_name = casa.pop()\n",
+    "    car_name = casa.pop()\n",
+    "except KeyError as e:\n",
+    "    pass\n",
+    "else:\n",
+    "    print(\"ciao\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'enter'"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ciao = {'enter': 'name'}\n",
+    "list(ciao.keys())[0]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
