Extract notifications() from K and add notifications_handler() to pubsub
* Introduce utils.auto_task()
* Various minor fixes

--- a/test1.ipynb
+++ b/test1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import inspect\n",
@@ -1534,6 +1534,104 @@
    "source": [
     "ciao = {'enter': 'name'}\n",
     "list(ciao.keys())[0]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "outputs": [],
+   "source": [
+    "from mape.utils import task_exception\n",
+    "\n",
+    "async def aciao(param, burp):\n",
+    "    print('aciao', param)\n",
+    "\n",
+    "def ciao(param):\n",
+    "    print('ciao', param)\n",
+    "\n",
+    "def auto_task(func, *args, **kwargs):\n",
+    "    if asyncio.iscoroutinefunction(func):\n",
+    "        wrapped_awaitable = task_exception(func(*args, **kwargs))\n",
+    "        return asyncio.create_task(wrapped_awaitable)\n",
+    "    else:\n",
+    "        return func(*args, **kwargs)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ciao 1\n",
+      "aciao 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "call_func_task(ciao, 1)\n",
+    "call_func_task(aciao, 2, burp=3)\n",
+    "await asyncio.sleep(1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "3"
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(2.51)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'Hi               StackOverflow!'"
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{\"Hi\": <16} StackOverflow!'"
    ],
    "metadata": {
     "collapsed": false,
